# libmikrokopter

./: CMakeLists.txt  LICENSE.txt  README.rst  cmake_uninstall.cmake.in  notes_todo.org
debian/: changelog  control  copyright  rules
include/mikrokopter/: kopter.h
include/mikrokopter/common/: running_average.h  time.h
include/mikrokopter/io/: common.h  console.h  io.h  serial.h
include/mikrokopter/protocol/: data_types.h  encoding.h  protocol.h
patches/: README.rst  firmware_v0.90j.patch  firmware_v2.00a.patch
src/: kopter.cpp
src/common/: time.cpp
src/io/: common.cpp  console.cpp  serial.cpp
src/protocol/: encoding.cpp  protocol.cpp
tools/: read_serial.cpp  test_curses.cpp  test_io_console.cpp  test_kopter.cpp  test_protocol.cpp
